[package]
name = "grpc-tutorial"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "grpc-server"
path = "src/grpc_server.rs"

[[bin]]
name = "grpc-client"
path = "src/grpc_client.rs"

[dependencies]
tonic = "0.13"
prost = "0.13"
tokio = { version = "1", features = ["full"]}
tokio-stream = "0.1"

[build-dependencies]
tonic-build = "0.13"